# OSS

./: .gitignore
L1/: CMakeLists.txt  func_to_test.c  func_to_test.h  main.c  test_main.cpp  test_suit_factorial.cpp  test_suit_isprime.cpp  test_suit_squareroot.cpp
L2/: test.ino
Project/Part A/code/: CMakeLists.txt  arduino_code.c  arduino_code.h  i386_code.c  i386_code.h  test_arduino_code.cpp  test_i386_code.cpp
Project/Part B/code/arduino_code/: arduino_code.ino
Project/Part B/code/extras/arduino_msg_router/: arduino_msg_router.ino
Project/Part B/code/extras/rtems_msg_router/: rtems_msg_router.c
Project/Part C/: autores.txt
Project/Part C/code/: i386_code.c
Project/Part C/project_partC/: i386_code.c
